--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
     "date-fns": "^3.3.1",
+    "html-react-parser": "^5.1.10",
     "microcms-js-sdk": "^2.7.0",
     "next": "14.1.0",
     "react": "^18",
