--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "date-fns": "^3.3.1",
     "html-react-parser": "^5.1.10",
     "microcms-js-sdk": "^2.7.0",
-    "next": "14.1.0",
+    "next": "^14.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
