--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "date-fns": "^3.3.1",
     "html-react-parser": "^5.1.10",
     "microcms-js-sdk": "^2.7.0",
-    "next": "^14.2.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.2",
+    "next-intl": "^3.11.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "^14.2.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
