--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@splidejs/react-splide": "^0.7.12",
     "date-fns": "^3.3.1",
     "html-react-parser": "^5.1.10",
+    "lodash": "^4.17.21",
     "microcms-js-sdk": "^2.7.0",
     "next": "^14.2.2",
     "next-intl": "^3.11.3",
