--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.5",
+    "@types/node": "20.14.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "^14.2.2",
