--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@eslint/compat": "^1.1.0",
     "@splidejs/react-splide": "^0.7.12",
     "date-fns": "^3.3.1",
     "html-react-parser": "^5.1.10",
@@ -18,13 +19,14 @@
     "next-intl": "^3.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "typescript-eslint": "^7.14.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.5",
     "@types/node": "20.14.8",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
