--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "@eslint/compat": "^1.1.0",
     "@splidejs/react-splide": "^0.7.12",
     "date-fns": "^3.3.1",
-    "html-react-parser": "^5.1.10",
     "lodash": "^4.17.21",
     "microcms-js-sdk": "^2.7.0",
-    "next": "^14.2.2",
+    "next": "^14.2.4",
     "next-intl": "^3.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,8 +22,10 @@
     "typescript-eslint": "^7.14.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/lodash": "^4.17.5",
     "@types/node": "20.14.8",
+    "@types/react": "18.3.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.2",
