--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.2",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "vercel": "^39.1.1"
   }
 }
